textこんとろーらーのnewアクションの定義

--- a/app/views/text/index.html.erb
+++ b/app/views/text/index.html.erb
@@ -1,15 +1,16 @@
 <div>
-    <% @blog.each do |blog| %>
+    <% @text.each do |blog| %>
       <li>
          <h2><%= blog.text%></h2>
       </li>
       <li>
         <%= link_to "詳細", text_path(text.id), method: :get %>
       </li>
-       <li>
+      <li>
           <%= link_to '編集', edit_text_path(text.id), method: :get %>
       </li>
-       <li>
+      <li>
           <%= link_to '削除', text_path(text.id), method: :delete %>
+      </li>
     <% end %>
 </div>
