textコントローラーのindexアクションの定義

--- a/app/views/text/index.html.erb
+++ b/app/views/text/index.html.erb
@@ -1,16 +1,13 @@
 <div>
-    <% @text.each do |blog| %>
+  <% @text.each do |text| %>
       <li>
-         <h2><%= blog.text%></h2>
+         <h2><%= text.text%></h2>
       </li>
-      <li>
-        <%= link_to "詳細", text_path(text.id), method: :get %>
-      </li>
-      <li>
-          <%= link_to '編集', edit_text_path(text.id), method: :get %>
-      </li>
-      <li>
-          <%= link_to '削除', text_path(text.id), method: :delete %>
-      </li>
-    <% end %>
+   <ul>
+     <li><%= link_to '詳細', text_path(text.id), method: :get %></li>
+     <li><%= link_to '編集', edit_text_path(text.id), method: :get %></li>
+     <li><%= link_to '削除', text_path(text.id), method: :delete %></li>
+   </ul>
+  <% end %>
+     
 </div>
