--- a/app/views/text/index.html.erb
+++ b/app/views/text/index.html.erb
@@ -1,12 +1,15 @@
-<div>
-  <% @texts.each do |text| %>
-      <li>
-         <h2><%= text.text%></h2>
-      </li>
-   <ul>
-     <li><%= link_to '編集', edit_text_path(text.id), method: :get %></li>
-     <li><%= link_to '削除', text_path(text.id),method: :delete %></li>
-   </ul>
-  <% end %>
-     
+<div class="card hoverable">
+   <% @texts.each do |text| %>
+    <div class="col s12 m6">
+      <div class="card lighten-5">
+        <div class="card-content lighten-5text">
+          <p><%= text.text%></p>
+        </div>
+        <div class="card-action">
+          <li class="btn waves-effect"><%= link_to '編集', edit_text_path(text.id), method: :get %></li>
+          <li class="btn waves-effect"><%= link_to '削除', text_path(text.id),method: :delete %></li>
+        </div>
+      </div>
+    </div>
+   <% end %>
 </div>
